--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/mannyportillo11/teamPro#readme",
   "dependencies": {
     "inquirer": "^8.1.5"
+  },
+  "devDependencies": {
+    "jest": "^27.2.1"
   }
 }
